Fixed footer logo spacing (xl)

--- a/css/style-xlarge.css
+++ b/css/style-xlarge.css
@@ -16,3 +16,11 @@
 		padding-top: 165px;
 		padding-bottom: 165px;
 	}
+
+
+
+.footer-logo {
+	padding-top: 10px;
+	max-width: 100%;
+	height: auto;
+}
