--- a/css/style.css
+++ b/css/style.css
@@ -1128,7 +1128,7 @@
 	height: auto;
 }
 .footer-logo {
-	padding-top: 10px;
+	padding-top: 2px;
 	max-width: 100%;
 	height: auto;
 }
